--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,57 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,600;1,700&display=swap");
+
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #f5f6fa;
+}
 .profile-img {
-    position: relative;
-    border: 3px solid #89c33f;
-    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
-  }
+  position: relative;
+  border: 3px solid #89c33f;
+  border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+}
+
+.scrollbar-none::-webkit-scrollbar {
+  display: none;
+}
+
+.active-border {
+  border-bottom: 3px solid #89c33f;
+}
+.carousel-nav-btn-prev {
+  /* width: 24px;
+  height: 24px; */
+  border-radius: 50%;
+  background-color: #a6aab3;
+  border: none;
+  color: #fff;
+  margin-right: 10px;
+  margin-top: 10px;
+  position: absolute;
+  right: 0;
+  top: 37px;
+  width: 27px;
+}
+.carousel-nav-btn-next {
+  /* width: 24px;
+  height: 24px; */
+  border-radius: 50%;
+  background-color: #a6aab3;
+  border: none;
+  color: #fff;
+  margin-left: 10px;
+  margin-top: 10px;
+  position: absolute;
+  left: 0;
+  top: 37px;
+  width: 27px;
+}
+
+.container-custom {
+  max-width: 1550px;
+  margin: 0 auto;
+}
+.sidebar-width {
+  max-width: 450px;
+  background-color: antiquewhite;
+  z-index: 100;
+}
