--- a/css/style.css
+++ b/css/style.css
@@ -59,17 +59,17 @@ body {
 
 .edited {
   border: 2px solid #f26969 !important;
+
   border-radius: 5px;
   /* padding: 15px 20px 0px 20px; */
-  padding: 7px  10px;
+  padding: 7px 10px;
   display: flex;
   justify-content: space-evenly;
-
   color: #f26969 !important;
 }
 .edited p {
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 .green-border {
@@ -90,4 +90,9 @@ body {
   border-radius: 50%;
   margin-top: -3px;
   border: none;
+}
+
+.dots {
+  font-weight: bolder;
+  pointer-events: inherit;
 }
