--- a/css/custom-switch-and-checkbox.css
+++ b/css/custom-switch-and-checkbox.css
@@ -1,75 +1,3 @@
-.onoffswitch {
-  position: relative;
-  width: 68px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-}
-.onoffswitch-checkbox {
-  position: absolute;
-  opacity: 0;
-  pointer-events: none;
-}
-.onoffswitch-label {
-  display: block;
-  overflow: hidden;
-  cursor: pointer;
-  border: 2px solid #999999;
-  border-radius: 3px;
-}
-.onoffswitch-inner {
-  display: block;
-  width: 200%;
-  margin-left: -100%;
-  transition: margin 0.3s ease-in 0s;
-}
-.onoffswitch-inner:before,
-.onoffswitch-inner:after {
-  display: block;
-  float: left;
-  width: 50%;
-  height: 28px;
-  padding: 0;
-  line-height: 30px;
-  font-size: 12px;
-  color: white;
-  font-family: Trebuchet, Arial, sans-serif;
-  font-weight: bold;
-  box-sizing: border-box;
-}
-.onoffswitch-inner:before {
-  content: "ON";
-  padding-left: 10px;
-  background-color: #3378c2;
-  color: #ffffff;
-}
-.onoffswitch-inner:after {
-  content: "OFF";
-  padding-right: 10px;
-  background-color: #898e99;
-  color: #fff;
-  text-align: right;
-}
-.onoffswitch-switch {
-  display: block;
-  width: 18px;
-  margin: 6px;
-  background: #ffffff;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 34px;
-  border: 2px solid #999999;
-  border-radius: 3px;
-  transition: all 0.3s ease-in 0s;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-  margin-left: 0;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-  right: 0px;
-}
-
 /* ------------------------ */
 
 @supports (-webkit-appearance: none) or (-moz-appearance: none) {
@@ -82,8 +10,6 @@
     --background: #fff;
     --disabled: #f6f8ff;
     --disabled-inner: #e1e6f9;
-    -webkit-appearance: none;
-    -moz-appearance: none;
     height: 21px;
     outline: none;
     display: inline-block;
@@ -147,7 +73,7 @@
   }
 
   .checkbox-wrapper-13 input[type="checkbox"]:not(.switch) {
-    border-radius: 7px;
+    border-radius: 4px;
   }
   .checkbox-wrapper-13 input[type="checkbox"]:not(.switch):after {
     width: 5px;
@@ -170,4 +96,98 @@
 .checkbox-wrapper-13 *:before,
 .checkbox-wrapper-13 *:after {
   box-sizing: inherit;
+}
+
+/* --------------------- */
+.switch-toggle {
+  display: flex;
+  height: 100%;
+  align-items: center;
+}
+.switch-btn,
+.layer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.button-check {
+  position: relative;
+  width: 60px;
+  height: 31px;
+  overflow: hidden;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.checkbox {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 3;
+}
+
+.switch-btn {
+  z-index: 2;
+}
+
+.layer {
+  width: 100%;
+  background-color: #898e99;
+  transition: 0.3s ease all;
+  z-index: 1;
+}
+#button-check .switch-btn:before,
+#button-check .switch-btn:after {
+  position: absolute;
+  top: 4px;
+  left: 4px;
+  width: 32px;
+  height: 23px;
+  color: #3b3c3d;
+  font-size: 10px;
+  font-weight: bold;
+  text-align: center;
+  line-height: 1;
+  padding: 9px 4px;
+  background-color: #fff;
+  border-radius: 2px;
+  transition: 0.3s cubic-bezier(0.18, 0.89, 0.35, 1.15) all;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#button-check .switch-btn:before {
+  content: "OFF";
+}
+
+#button-check .switch-btn:after {
+  content: "ON";
+}
+
+#button-check .switch-btn:after {
+  right: -50px;
+  left: auto;
+  background-color: #fff;
+}
+
+#button-check .checkbox:checked + .switch-btn:before {
+  left: -50px;
+}
+
+#button-check .checkbox:checked + .switch-btn:after {
+  right: 4px;
+}
+
+#button-check .checkbox:checked ~ .layer {
+  background-color: #3378c2;
 }
