--- a/css/style.css
+++ b/css/style.css
@@ -180,3 +180,18 @@ body {
 .nav-tabs > li > button {
   box-shadow: none !important;
 }
+
+.disabled {
+  position: relative;
+}
+
+.disabled:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  background: rgba(255, 255, 255, 0.5);
+}
